instant-biggan-clip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instant-biggan-clip
  labels:
    app: instant-biggan-clip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instant-biggan-clip
  template:
    metadata:
      labels:
        app: instant-biggan-clip
    spec:
      hostname: instant-biggan-clip
      containers:
      - name: instant-biggan-clip
        image: gitlab-registry.nrp-nautilus.io/ml-imagination/instant-biggan-clip:latest
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            nvidia.com/gpu: 0
            cpu: "2"
            memory: "12Gi"
          limits:
            nvidia.com/gpu: 0
            cpu: "2"
            memory: "12Gi"
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
        - name: ekphrasis2-persistent-storage
          mountPath: /home/jovyan/work
      imagePullSecrets: 
      - name: registry-credentials
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: ekphrasis2-persistent-storage
          persistentVolumeClaim:
            claimName: ekphrasis2-pv-claim
