instant-biggan-clip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: instant-biggan-clip
spec:
  rules:
  - host: instant-biggan-clip.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: instant-biggan-clip
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - instant-biggan-clip.nrp-nautilus.io
---
apiVersion: v1
kind: Service
metadata:
  name: instant-biggan-clip
  labels:
    app: instant-biggan-clip
spec:
  selector:
    app: instant-biggan-clip
  ports:
  - name: http
    protocol: TCP
    port: 8080
